--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>io.github.Jorge-Fern</groupId>
     <artifactId>LTClient</artifactId>
-    <version>0.9.0</version>
+    <version>0.9.0-SNAPSHOT</version>
     <organization>
         <name>Jorge Fernando Gonçalves</name>
     </organization>
