--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -27,7 +27,7 @@ jobs:
         server-password: MAVEN_PASSWORD
 
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn -P release -B package --file pom.xml
 
     - name: Publish package
       run: mvn --batch-mode deploy
