--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -30,7 +30,7 @@ jobs:
       run: mvn -P release -B package --file pom.xml
 
     - name: Publish package
-      run: mvn --batch-mode deploy
+      run: mvn -P release --batch-mode deploy
       env:
           MAVEN_USERNAME: ${{ secrets.OSSRH_USERNAME }}
           MAVEN_PASSWORD: ${{ secrets.OSSRH_TOKEN }}
