--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
+    <url>https://github.com/Jorge-Fern/LTClient</url>
     <groupId>io.github.Jorge-Fern</groupId>
     <artifactId>LTClient</artifactId>
     <version>0.9.2</version>
@@ -17,6 +17,12 @@
     <description>
         This project is a library for interacting with LanguageTool http API
     </description>
+    <licenses>
+        <license>
+            <name>MIT License</name>
+            <url>http://www.opensource.org/licenses/mit-license.php</url>
+        </license>
+    </licenses>
 
     <developers>
         <developer>
